Apply suggestions from code review
Co-Authored-By: lbischof <1837725+lbischof@users.noreply.github.com>

--- a/src/components/ose/chargeback.html
+++ b/src/components/ose/chargeback.html
@@ -10,7 +10,7 @@
 
 <form method="post" onsubmit="spinner();">
     <div class="form-group">
-        <label for="project">Project name</label>
+        <label for="project">Project Name</label>
         <input type="text" class="form-control" required id="project" name="project" placeholder="projektname-dev">
     </div>
     <div class="form-group">
